force-app/src/objects/TR1__BHLO_Log__c.object
<CustomObject>
    <fields>
        <fullName>TR1__Indexing_CV_Checksum__c</fullName>
        <description>A hash of the CV file that was included in the indexing.</description>
        <inlineHelpText>A hash of the CV file that was included in the indexing.</inlineHelpText>
        <label>Indexing CV Checksum</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Indexing_Payload_Checksum__c</fullName>
        <description>A hash of the object fields included in the TMF template and their values at the time of indexing.</description>
        <inlineHelpText>A hash of the object fields included in the TMF template and their values at the time of indexing.</inlineHelpText>
        <label>Indexing Payload Checksum</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Indexing_TMF_Checksum__c</fullName>
        <description>A hash of the TMF template that was used in the indexing.</description>
        <inlineHelpText>A hash of the TMF template that was used in the indexing.</inlineHelpText>
        <label>Indexing TMF Checksum</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Indexing_Timestamp__c</fullName>
        <description>A Unix timestamp (a number of milliseconds) when the indexing occurred.</description>
        <inlineHelpText>A Unix timestamp (a number of milliseconds) when the indexing occurred.</inlineHelpText>
        <label>Indexing Timestamp</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TR1__Location__c</fullName>
        <label>location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__MW_Task_Entry_ID__c</fullName>
        <description>The ID of a task entry in Charm that this log is related to.</description>
        <inlineHelpText>The ID of a task entry in Charm that this log is related to.</inlineHelpText>
        <label>MW Task Entry ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__MW_Task_ID__c</fullName>
        <description>The ID of a task in Charm that this log is related to.</description>
        <inlineHelpText>The ID of a task in Charm that this log is related to.</inlineHelpText>
        <label>MW Task ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Message__c</fullName>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Module__c</fullName>
        <label>Module</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Monitor_Bulk_Job__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A Monitor Bulk Job record for which this log was created.</description>
        <inlineHelpText>A Monitor Bulk Job record for which this log was created.</inlineHelpText>
        <label>Monitor Bulk Job</label>
        <referenceTo>TR1__Monitor_Bulk_Job__c</referenceTo>
        <relationshipLabel>Logs</relationshipLabel>
        <relationshipName>BHLO_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Operation__c</fullName>
        <inlineHelpText>Operation Type for a log with populated Record Id.</inlineHelpText>
        <label>Operation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Record_id__c</fullName>
        <externalId>true</externalId>
        <label>Record id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Request__c</fullName>
        <label>Request</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Response__c</fullName>
        <label>Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Status__c</fullName>
        <inlineHelpText>Separates logs by status</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Exception</fullName>
                </value>
                <value>
                    <fullName>Callout</fullName>
                </value>
                <value>
                    <fullName>Status</fullName>
                    <default>true</default>
                    <label>Status</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Log</label>
    <listViews>
        <fullName>TR1__All</fullName>
        <columns>NAME</columns>
        <columns>TR1__Module__c</columns>
        <columns>TR1__Type__c</columns>
        <columns>TR1__Message__c</columns>
        <columns>TR1__Request__c</columns>
        <columns>TR1__Response__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>